fixed z-index bug

--- a/app/index.css
+++ b/app/index.css
@@ -384,6 +384,7 @@ select {
   width: 100%;
    height: 100%;
   background:rgba(0,0,0,.5);
+  z-index: 1;
 }
 
 #modalContent {
@@ -392,7 +393,7 @@ select {
   left: 50%;
   margin-left: -500px;
   margin-top: -380px;
-  z-index: 1;
+  z-index: 2;
   width: 1000px;
   height: 760px;
   background: #333;
